# Fromville-No-Way-Out

./: .gitignore  CMakeLists.txt  CODEBASE_ANALYSIS_REPORT.md  PROJECT_OPERATION_DETAILS.txt  PROJECT_STARTUP_SLOW_CAUSES.txt  PROJECT_TODO_NEXT_FIXES.txt  README.md  REFACTOR_PLAN.md  TODO.md  logs.txt  scratch.py  stdout.txt  terrain_standalone.cpp  test_quest_system.py
assets/audio/: README.md
assets/audio/voice/: manifest_dialogue_tts.json
assets/config/: interaction_nodes.txt
assets/dialogue/: boyd.json  jade.json  tabitha.json  victor.json
assets/models/: Dinner.mtl  Grass.mtl  House.mtl  OldHouseobj.mtl  Police.mtl  Resident evil.mtl  RoadRoutatLong.mtl  Tree.mtl  Tree2.mtl  Tree3.mtl  boyd.dae  light stand.mtl
assets/models/Character 1/: Left Strafe Walking.fbx  Right Strafe Walking.fbx  Running.fbx  Standing Idle.fbx  Walking Backwards (1).fbx
assets/shaders/: bloom_blur.frag  bloom_bright.frag  color.vert  debug_line.frag  debug_line.vert  geometry.frag  geometry.vert  lighting.frag  model_debug.frag  model_debug.vert  model_lit.frag  model_lit.vert  particle.frag  particle.vert  post_process.frag  procedural_humanoid.frag  procedural_world.frag  procedural_world.vert  puzzle_overlay.frag  puzzle_overlay.vert  shadow_dir.frag  shadow_dir.vert  shadow_point.frag  shadow_point.geom  shadow_point.vert  sky.frag  sky.vert  ssao.frag  ssao.vert  ssao_blur.frag  terrain_procedural.frag  terrain_procedural.vert  text.frag  ui.frag  ui.vert
include/: mingw_workaround.h
include/glad/: glad.h
scratch/: check_shapes.py  find_house_door.py  shapes_out.txt
shaders/: animated.frag  animated.vert  grass.frag  grass.vert  ground.frag  ground.vert  sky.frag  sky.vert  tree.frag  tree.vert  ui_background.frag  ui_button.vert
src/: main.cpp
src/ai/: CreatureAI.cpp  CreatureAI.h  NPC.h  NavMesh.cpp  NavMesh.h  WhistleSystem.cpp  WhistleSystem.h
src/audio/: AudioEngine.cpp  AudioEngine.h  SoundSource.cpp  SoundSource.h
src/characters/: Boyd.cpp  Boyd.h  Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h  Jade.cpp  Jade.h  PlayerController.cpp  PlayerController.h  Sara.cpp  Sara.h  Tabitha.cpp  Tabitha.h  Victor.cpp  Victor.h
src/core/: EventBus.cpp  EventBus.h  Game.cpp  Game.h  GladLoader.cpp  InputManager.cpp  InputManager.h  SaveSystem.cpp  SaveSystem.h  Timer.cpp  Window.cpp  Window.h
src/engine/: Component.h  Transform.cpp  Transform.h
src/engine/audio/: AudioManager.cpp  AudioManager.h
src/engine/core/: Engine.cpp  Engine.h  GladLoader.cpp  InputManager.cpp  InputManager.h  StartupTimer.cpp  StartupTimer.h  Timer.cpp  Timer.h  Window.cpp  Window.h
src/engine/input/: InputAction.h  InputContext.cpp  InputContext.h  KeyBindings.cpp  KeyBindings.h
src/engine/physics/: BVH.cpp  BVH.h  Collision.cpp  Collision.h  CollisionWorld.cpp  CollisionWorld.h  HeightmapSampler.cpp  HeightmapSampler.h  HitResult.h  Triangle.h
src/engine/renderer/: AnimatedMesh.cpp  AnimatedMesh.h  Animation.h  Animator.h  Bone.cpp  Bone.h  Camera.cpp  Camera.h  DebugCubeRenderer.cpp  DebugCubeRenderer.h  GrassRenderer.cpp  GrassRenderer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderUtils.cpp  ShaderUtils.h  SkydomeRenderer.cpp  SkydomeRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  TextRenderer.cpp  TextRenderer.h  TreeRenderer.cpp  TreeRenderer.h  UIRenderer.cpp  UIRenderer.h  terrain.cpp  terrain.h
src/engine/resources/: loader.cpp  loader.h
src/engine/ui/: Animator.h  MainMenuScreen.cpp  MainMenuScreen.h  TransitionManager.cpp  TransitionManager.h  UIManager.cpp  UIManager.h  UIScreen.cpp  UIScreen.h  UIWidget.h
src/game/: Game.cpp  Game.h  PlayerController.h
src/game/atmosphere/: AtmosphereManager.cpp  AtmosphereManager.h
src/game/dialogue/: DialogueManager.cpp  DialogueManager.h  DialogueTypes.h  DialogueUI.cpp  DialogueUI.h
src/game/entities/: BaseEntity.cpp  BaseEntity.h  Boyd.cpp  Boyd.h  Character.cpp  Character.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  EnvironmentObject.cpp  EnvironmentObject.h  Interactable.cpp  Interactable.h  Jade.cpp  Jade.h  NPC.cpp  NPC.h  Player.cpp  Player.h  Sara.cpp  Sara.h  Tabitha.cpp  Tabitha.h  Victor.cpp  Victor.h
src/game/interactions/: InteractionSystem.cpp  InteractionSystem.h
src/game/memory/: MemoryReplaySystem.cpp  MemoryReplaySystem.h
src/game/moral/: MoralCorruptionSystem.cpp  MoralCorruptionSystem.h
src/game/puzzles/: CipherDecodePuzzle.cpp  CipherDecodePuzzle.h  ConnectTheCluesPuzzle.cpp  ConnectTheCluesPuzzle.h  CultDebatePuzzle.cpp  CultDebatePuzzle.h  EvidenceBoardPuzzle.cpp  EvidenceBoardPuzzle.h  LedgerRotationPuzzle.cpp  LedgerRotationPuzzle.h  MaraTrustDialoguePuzzle.cpp  MaraTrustDialoguePuzzle.h  PuzzleBase.h  PuzzleManager.cpp  PuzzleManager.h  PuzzleTypes.h  RitualInferencePuzzle.cpp  (+7 more)
src/narrative/: DialogueSystem.cpp  DialogueSystem.h  NarrativeEngine.cpp  NarrativeEngine.h  QuestLog.cpp  QuestLog.h  narrative_test.cpp
src/renderer/: AnimationNames.h  Camera.cpp  Camera.h  CharacterAppearance.cpp  CharacterAppearance.h  FaceDetailGenerator.cpp  FaceDetailGenerator.h  GBuffer.cpp  GBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  PostFXState.h  PostProcess.cpp  PostProcess.h  ProceduralClothing.cpp  ProceduralClothing.h  ProceduralHair.cpp  ProceduralHair.h  ProceduralHumanoid.cpp  ProceduralHumanoid.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  SkeletalAnimator.cpp  SkeletalAnimator.h  Texture.cpp  Texture.h
src/ui/: HUD.cpp  HUD.h
src/world/: DayNightCycle.cpp  DayNightCycle.h  GlyphPuzzle.cpp  GlyphPuzzle.h  RoadNetwork.cpp  RoadNetwork.h  TalismanSystem.cpp  TalismanSystem.h  Terrain.cpp  Terrain.h  TunnelNetwork.h  World.cpp  World.h  WorldBuilder.cpp  WorldBuilder.h
terrain/: CMakeLists.txt  glad.cpp  main.cpp
terrain/shaders/: grass.frag  grass.vert  ground.vert  sky.frag  sky.vert
tools/: README_audio_tts.md  fix_build_blockers.ps1  generate_dialogue_tts.py  generate_heightmap.py  generate_road_mask.py  generate_splatmap.py  patch_puzzle_manager_routes.ps1
(+118 files in other folders)
